--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
 	<name>kamalov_sat</name>
 	<description>kamalov_sat</description>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
